fixed page shifting when page length changes

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -2,3 +2,5 @@
     font-family: roboto;
     padding: left;
   }
+
+html { overflow-x:auto; overflow-y:scroll; }
